frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: expense
spec:
  selector:
    app: frontend
    tier: web
    project: expense
  ports:
  - protocol: TCP
    port: 80 # Service port
    targetPort: 8080 # We are giving port out of system ports 0-1024 as we are running this manifest file as non-root user. 
    # It won't have access to take system ports
